apps/oxlint/src/snapshots/fixtures__disable_vitest_rules_-c .oxlintrc-vitest.json --report-unused-disable-directives test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc-vitest.json --report-unused-disable-directives test.js
working directory: fixtures/disable_vitest_rules
----------

  x eslint-plugin-jest(no-restricted-jest-methods): Use of `advanceTimersByTime` is not allowed
   ,-[test.js:7:6]
 6 | it('calls the callback after 1 second via advanceTimersByTime', () => {
 7 |   vi.advanceTimersByTime(1000);
   :      ^^^^^^^^^^^^^^^^^^^
 8 | })
   `----

  ! Unused eslint-disable directive (no problems were reported).
    ,-[test.js:19:5]
 18 |   // This one should trigger a warning about an unnecessary disable:
 19 |   // oxlint-disable-next-line vitest/no-restricted-vi-methods
    :     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 20 |   video.play();
    `----

Found 1 warning and 1 error.

Errors  Files
     1  test.js:7

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
