apps/oxlint/src/snapshots/fixtures__eslint_and_typescript_alias_rules_-c oxlint-eslint.json test.js -c oxlint-typescript.json test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c oxlint-eslint.json test.js
working directory: fixtures/eslint_and_typescript_alias_rules
----------

  x eslint(no-magic-numbers): No magic number: 0.19
   ,-[test.js:4:32]
 3 | const price = 200;
 4 | const price_with_tax = price * 0.19; // taxes are expensive
   :                                ^^^^
 5 | 
   `----
  help: Use a named constant instead of a magic number to make the code more readable and maintainable.

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:4

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: -c oxlint-typescript.json test.js
working directory: fixtures/eslint_and_typescript_alias_rules
----------

  x eslint(no-magic-numbers): No magic number: 0.19
   ,-[test.js:4:32]
 3 | const price = 200;
 4 | const price_with_tax = price * 0.19; // taxes are expensive
   :                                ^^^^
 5 | 
   `----
  help: Use a named constant instead of a magic number to make the code more readable and maintainable.

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:4

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
