apps/oxlint/src/snapshots/fixtures__extends_config_--config extends_rules_config.json console.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --config extends_rules_config.json console.js
working directory: fixtures/extends_config
----------

  x eslint(no-console): Unexpected console statement.
   ,-[console.js:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 1 error.

Errors  Files
     1  console.js:1

Finished in <variable>ms on 1 file with 94 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
