apps/oxlint/src/snapshots/fixtures__ignore_patterns_whitelist_ .@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: 
working directory: fixtures/ignore_patterns_whitelist
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[index.whitelist.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.

Errors  Files
     1  index.whitelist.ts:1

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: .
working directory: fixtures/ignore_patterns_whitelist
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[index.whitelist.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.

Errors  Files
     1  index.whitelist.ts:1

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
