apps/oxlint/src/snapshots/fixtures__import_-c .oxlintrc.json test.js -c .oxlintrc-import-x.json test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c .oxlintrc.json test.js
working directory: fixtures/import
----------

  x eslint-plugin-import(no-default-export): Prefer named exports
   ,-[test.js:7:8]
 6 | // import/no-default-export
 7 | export default function () { }
   :        ^^^^^^^
 8 | 
   `----

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:7

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: -c .oxlintrc-import-x.json test.js
working directory: fixtures/import
----------

  x eslint-plugin-import(no-default-export): Prefer named exports
   ,-[test.js:7:8]
 6 | // import/no-default-export
 7 | export default function () { }
   :        ^^^^^^^
 8 | 
   `----

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:7

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
