apps/oxlint/src/snapshots/fixtures__jest_and_vitest_alias_rules_-c oxlint-jest.json test.js -c oxlint-vitest.json test.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: -c oxlint-jest.json test.js
working directory: fixtures/jest_and_vitest_alias_rules
----------

  x eslint-plugin-jest(no-identical-title): Test title is used multiple times in the same describe block.
   ,-[test.js:3:6]
 2 |   it("works", () => {});
 3 |   it("works", () => {});
   :      ^^^^^^^
 4 | });
   `----
  help: Change the title of test.

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:3

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------

########## 
arguments: -c oxlint-vitest.json test.js
working directory: fixtures/jest_and_vitest_alias_rules
----------

  x eslint-plugin-jest(no-identical-title): Test title is used multiple times in the same describe block.
   ,-[test.js:3:6]
 2 |   it("works", () => {});
 3 |   it("works", () => {});
   :      ^^^^^^^
 4 | });
   `----
  help: Change the title of test.

Found 0 warnings and 1 error.

Errors  Files
     1  test.js:3

Finished in <variable>ms on 1 file with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
